--- a/style.css
+++ b/style.css
@@ -1,16 +1,23 @@
-@font-face {
-  font-family: "San Francisco";
+@font-face{
+  font-family: "Open Sans";
   font-weight: 400;
-  src: url('font/sanfranciscodisplay-regular-webfont.woff') format('woff');
+  src: url('font/open-sans') format('woff');
 }
 
-body { background: #FFFACD;
-  font-family: "San Francisco", "Ubuntu", "Arial";
+body{
+  background: #FFFACD;
+ }
+
+body,
+option,
+select,
+input{
+   font-family: "Open Sans", "Ubuntu", "Arial";
  }
 
 .iFrigoimg{
-  width: 2%;
-  height: 2%;
+  width: 3%;
+  height: 3%;
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -19,4 +26,19 @@ body { background: #FFFACD;
 h1{
   color: #A52A2A;
   text-align: center;
+  letter-spacing: -2px;
 }
+
+ul {
+  list-style-type: circle;
+}
+
+footer{
+			height: 25px;
+			background-size: cover;
+			background-position: bottom;
+			text-align: center;
+			padding-top: 0px;
+			color:#F08080;
+			background-color:#26627c;
+		}
