--- a/style.css
+++ b/style.css
@@ -6,27 +6,38 @@
 
 body{
   background: #FFFACD;
+  position: relative;
  }
 
 body,
 option,
 select,
 input{
-   font-family: "Open Sans", "Ubuntu", "Arial";
+   font-family: "Arial", "Open Sans", "Ubuntu", "Arial";
  }
 
-.iFrigoimg{
-  width: 3%;
-  height: 3%;
-  display: block;
-  margin-left: auto;
-  margin-right: auto;
+.header{
+  background-color: black;
+  background-image: url("images/iFrigo_white.png");
+  background-repeat: no-repeat;
+  background-size: contain;
+  color: white;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  min-height: 12%;
+  text-align: center;
 }
 
 h1{
   color: #A52A2A;
-  text-align: center;
   letter-spacing: -2px;
+  font-style: normal;
+}
+
+.contenuDuFrigo{
+  padding-top: 12%;
 }
 
 ul {
@@ -34,11 +45,8 @@ ul {
 }
 
 footer{
-			height: 25px;
-			background-size: cover;
-			background-position: bottom;
+      width: 100%;
 			text-align: center;
-			padding-top: 0px;
 			color:#F08080;
 			background-color:#26627c;
 		}
