--- a/style.css
+++ b/style.css
@@ -16,7 +16,7 @@
 
 /* General */
 body{
-  background: #B1EEDA;
+  background-image: linear-gradient(#7E5FE7, #BFB1EE);
   position: relative;
   padding-left: 8px;
  }
@@ -70,9 +70,8 @@ table{
 
 .contenuDuFrigo{
   position: relative;
-  padding-left: 20px;
   margin: 0 auto;
-  width: 250px;
+  width: 270px;
   background-color: white;
   border-radius: 5px 5px 5px 5px;
 }
