--- a/style.css
+++ b/style.css
@@ -91,6 +91,7 @@ table{
   margin-top: 3%;
 }
 
+.resultatRecherche{text-align: center;}
 .achat{ display: flex;}
 
 .manger{
@@ -206,5 +207,5 @@ input, select{background-color: #FFDB5C;}
   left: 40px;
   animation-name: consommerProduit;
   animation-duration: 3s;
-  animation-iteration-count: alternate;
+  animation-iteration-count: 1;
 }
